--- a/index.html
+++ b/index.html
@@ -342,52 +342,52 @@
           <label>Selecione a Turma:</label>
           <select id="studentClass" class="form-control" required onchange="atualizarSala()">
             <option value="">Selecione a turma</option>
-            <option value="6° ANO A MANHA ANUAL">6° ANO A MANHA ANUAL</option>
-            <option value="6° ANO B MANHA ANUAL">6° ANO B MANHA ANUAL</option>
-            <option value="6° ANO C MANHA ANUAL">6° ANO C MANHA ANUAL</option>
-            <option value="6° ANO D MANHA ANUAL">6° ANO D MANHA ANUAL</option>
-            <option value="6° ANO E TARDE ANUAL">6° ANO E TARDE ANUAL</option>
-            <option value="6° ANO F TARDE ANUAL">6° ANO F TARDE ANUAL</option>
-            <option value="7° ANO A TARDE ANUAL">7° ANO A TARDE ANUAL</option>
-            <option value="7° ANO B TARDE ANUAL">7° ANO B TARDE ANUAL</option>
-            <option value="7° ANO C TARDE ANUAL">7° ANO C TARDE ANUAL</option>
-            <option value="7° ANO D TARDE ANUAL">7° ANO D TARDE ANUAL</option>
-            <option value="7° ANO E TARDE ANUAL">7° ANO E TARDE ANUAL</option>
-            <option value="7° ANO F TARDE ANUAL">7° ANO F TARDE ANUAL</option>
-            <option value="8° ANO A TARDE ANUAL">8° ANO A TARDE ANUAL</option>
-            <option value="8° ANO B TARDE ANUAL">8° ANO B TARDE ANUAL</option>
-            <option value="8° ANO C TARDE ANUAL">8° ANO C TARDE ANUAL</option>
-            <option value="8° ANO D TARDE ANUAL">8° ANO D TARDE ANUAL</option>
-            <option value="8° ANO E TARDE ANUAL">8° ANO E TARDE ANUAL</option>
-            <option value="9° ANO A TARDE ANUAL">9° ANO A TARDE ANUAL</option>
-            <option value="9° ANO B TARDE ANUAL">9° ANO B TARDE ANUAL</option>
-            <option value="9° ANO C TARDE ANUAL">9° ANO C TARDE ANUAL</option>
-            <option value="9° ANO D TARDE ANUAL">9° ANO D TARDE ANUAL</option>
-            <option value="1ª SERIE A MANHA ANUAL">1ª SERIE A MANHA ANUAL</option>
-            <option value="1ª SERIE B MANHA ANUAL">1ª SERIE B MANHA ANUAL</option>
-            <option value="1ª SERIE C MANHA ANUAL">1ª SERIE C MANHA ANUAL</option>
-            <option value="1ª SERIE D MANHA ANUAL">1ª SERIE D MANHA ANUAL</option>
-            <option value="1ª SERIE E MANHA ANUAL">1ª SERIE E MANHA ANUAL</option>
-            <option value="1ª SERIE F MANHA ANUAL">1ª SERIE F MANHA ANUAL</option>
-            <option value="1ª SERIE G TARDE ANUAL">1ª SERIE G TARDE ANUAL</option>
-            <option value="1ª SERIE H NOITE ANUAL">1ª SERIE H NOITE ANUAL</option>
-            <option value="1ª SERIE I NOITE ANUAL">1ª SERIE I NOITE ANUAL</option>
-            <option value="2ª SERIE A MANHA ANUAL">2ª SERIE A MANHA ANUAL</option>
-            <option value="2ª SERIE B MANHA ANUAL">2ª SERIE B MANHA ANUAL</option>
-            <option value="2ª SERIE C MANHA ANUAL">2ª SERIE C MANHA ANUAL</option>
-            <option value="2ª SERIE D MANHA ANUAL">2ª SERIE D MANHA ANUAL</option>
-            <option value="2ª SERIE E MANHA ANUAL">2ª SERIE E MANHA ANUAL</option>
-            <option value="2ª SERIE F NOITE ANUAL">2ª SERIE F NOITE ANUAL</option>
-            <option value="2ª SERIE G NOITE ANUAL">2ª SERIE G NOITE ANUAL</option>
-            <option value="2ª SERIE H NOITE ANUAL">2ª SERIE H NOITE ANUAL</option>
-            <option value="2ª SERIE I NOITE ANUAL">2ª SERIE I NOITE ANUAL</option>
-            <option value="3ª SERIE A MANHA ANUAL">3ª SERIE A MANHA ANUAL</option>
-            <option value="3ª SERIE B MANHA ANUAL">3ª SERIE B MANHA ANUAL</option>
-            <option value="3ª SERIE C MANHA ANUAL">3ª SERIE C MANHA ANUAL</option>
-            <option value="3ª SERIE D NOITE ANUAL">3ª SERIE D NOITE ANUAL</option>
-            <option value="3ª SERIE E NOITE ANUAL">3ª SERIE E NOITE ANUAL</option>
-            <option value="3ª SERIE F NOITE ANUAL">3ª SERIE F NOITE ANUAL</option>
-            <option value="3ª SERIE G NOITE ANUAL">3ª SERIE G NOITE ANUAL</option>
+            <option value="6° ANO A MANHA">6° ANO A MANHA ANUAL</option>
+            <option value="6° ANO B MANHA">6° ANO B MANHA ANUAL</option>
+            <option value="6° ANO C MANHA">6° ANO C MANHA ANUAL</option>
+            <option value="6° ANO D MANHA">6° ANO D MANHA ANUAL</option>
+            <option value="6° ANO E TARDE">6° ANO E TARDE ANUAL</option>
+            <option value="6° ANO F TARDE">6° ANO F TARDE ANUAL</option>
+            <option value="7° ANO A TARDE">7° ANO A TARDE ANUAL</option>
+            <option value="7° ANO B TARDE">7° ANO B TARDE ANUAL</option>
+            <option value="7° ANO C TARDE">7° ANO C TARDE ANUAL</option>
+            <option value="7° ANO D TARDE">7° ANO D TARDE ANUAL</option>
+            <option value="7° ANO E TARDE">7° ANO E TARDE ANUAL</option>
+            <option value="7° ANO F TARDE">7° ANO F TARDE ANUAL</option>
+            <option value="8° ANO A TARDE">8° ANO A TARDE ANUAL</option>
+            <option value="8° ANO B TARDE">8° ANO B TARDE ANUAL</option>
+            <option value="8° ANO C TARDE">8° ANO C TARDE ANUAL</option>
+            <option value="8° ANO D TARDE">8° ANO D TARDE ANUAL</option>
+            <option value="8° ANO E TARDE">8° ANO E TARDE ANUAL</option>
+            <option value="9° ANO A TARDE">9° ANO A TARDE ANUAL</option>
+            <option value="9° ANO B TARDE">9° ANO B TARDE ANUAL</option>
+            <option value="9° ANO C TARDE">9° ANO C TARDE ANUAL</option>
+            <option value="9° ANO D TARDE">9° ANO D TARDE ANUAL</option>
+            <option value="1ª SERIE A MANHA">1ª SERIE A MANHA ANUAL</option>
+            <option value="1ª SERIE B MANHA">1ª SERIE B MANHA ANUAL</option>
+            <option value="1ª SERIE C MANHA">1ª SERIE C MANHA ANUAL</option>
+            <option value="1ª SERIE D MANHA">1ª SERIE D MANHA ANUAL</option>
+            <option value="1ª SERIE E MANHA">1ª SERIE E MANHA ANUAL</option>
+            <option value="1ª SERIE F MANHA">1ª SERIE F MANHA ANUAL</option>
+            <option value="1ª SERIE G TARDE">1ª SERIE G TARDE ANUAL</option>
+            <option value="1ª SERIE H NOITE">1ª SERIE H NOITE ANUAL</option>
+            <option value="1ª SERIE I NOITE">1ª SERIE I NOITE ANUAL</option>
+            <option value="2ª SERIE A MANHA">2ª SERIE A MANHA ANUAL</option>
+            <option value="2ª SERIE B MANHa">2ª SERIE B MANHA ANUAL</option>
+            <option value="2ª SERIE C MANHA">2ª SERIE C MANHA ANUAL</option>
+            <option value="2ª SERIE D MANHA">2ª SERIE D MANHA ANUAL</option>
+            <option value="2ª SERIE E MANHA">2ª SERIE E MANHA ANUAL</option>
+            <option value="2ª SERIE F NOITE">2ª SERIE F NOITE ANUAL</option>
+            <option value="2ª SERIE G NOITE">2ª SERIE G NOITE ANUAL</option>
+            <option value="2ª SERIE H NOITE">2ª SERIE H NOITE ANUAL</option>
+            <option value="2ª SERIE I NOITE">2ª SERIE I NOITE ANUAL</option>
+            <option value="3ª SERIE A MANHA">3ª SERIE A MANHA ANUAL</option>
+            <option value="3ª SERIE B MANHA">3ª SERIE B MANHA ANUAL</option>
+            <option value="3ª SERIE C MANHA">3ª SERIE C MANHA ANUAL</option>
+            <option value="3ª SERIE D NOITE">3ª SERIE D NOITE ANUAL</option>
+            <option value="3ª SERIE E NOITE">3ª SERIE E NOITE ANUAL</option>
+            <option value="3ª SERIE F NOITE">3ª SERIE F NOITE ANUAL</option>
+            <option value="3ª SERIE G NOITE">3ª SERIE G NOITE ANUAL</option>
             <option value="4050 - ADMINISTRAÇÃO - 2ª SERIE A MANHA ANUAL">4050 - ADMINISTRAÇÃO - 2ª SERIE A MANHA ANUAL</option>
           </select>
         </div>
