--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
           <label>Selecione a Turma:</label>
           <select id="studentClass" class="form-control" required onchange="atualizarSala()">
             <option value="">Selecione a turma</option>
-            <option value="6° ANO A MANHA">6° ANO A MANHA ANUAL</option>
-            <option value="6° ANO B MANHA">6° ANO B MANHA ANUAL</option>
-            <option value="6° ANO C MANHA">6° ANO C MANHA ANUAL</option>
+            <option value="6° ANO A MANHA ANUAL">6° ANO A MANHA ANUAL</option>
+            <option value="6° ANO B MANHA ANUAL">6° ANO B MANHA ANUAL</option>
+            <option value="6° ANO C MANHA ANUAL">6° ANO C MANHA ANUAL</option>
             <option value="6° ANO D MANHA">6° ANO D MANHA ANUAL</option>
             <option value="6° ANO E TARDE">6° ANO E TARDE ANUAL</option>
             <option value="6° ANO F TARDE">6° ANO F TARDE ANUAL</option>
