Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     <div class="form-container">
       <div class="form-row">
         <div class="form-group">
-          <label>Professor:</label>
+          <label>PROFESSOR:</label>
           <select id="professor" onchange="atualizarEmail()">
             <option>Selecione</option>
           </select>
