Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
         
         <div class="form-group datepicker-container">
-          <label>Data:</label>
+          <label>DATA:</label>
           <input type="text" id="data-selecionada" class="datepicker-input" readonly placeholder="Clique para selecionar">
           <div class="datepicker-popup" id="datepickerPopup">
             <div class="datepicker-header">
