Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -569,10 +569,10 @@
 
     // Dados dos aparelhos
     const marcas = {
-      "Tablet": "Positivo",
-      "Smartphone": "Positivo",
-      "Chromebook": "Samsung",
-      "Notebook": "Positivo"
+      "TABLET": "POSITIVO",
+      "SMARTPHONE": "POSITIVO",
+      "CHROMEBOOK": "SAMSUNG",
+      "NOTEBOOK": "POSITIVO"
     };
 
     // Dados das salas por turma e período
