Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           <label>TIPO DE APARELHO:</label>
           <select id="tipo-aparelho" onchange="atualizarMarca()">
             <option value="">Selecione</option>
-            <option value="Tablet">Tablet</option>
+            <option value="TABLET">Tablet</option>
             <option value="SMARTPHONE">Smartphone</option>
             <option value="CHROMEBOOK">Chromebook</option>
             <option value="NOTEBOOK">Notebook</option>
