--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@
 
       <div class="form-row">
         <div class="form-group">
-          <label>TIPO DE APARELHO:</label>
-          <select id="tipo-aparelho" onchange="atualizarMarca()">
+          <label>APARELHO:</label>
+          <select id="aparelho" onchange="atualizarMarca()">
             <option value="">Selecione</option>
-            <option value="TABLET">Tablet</option>
-            <option value="SMARTPHONE">Smartphone</option>
-            <option value="CHROMEBOOK">Chromebook</option>
-            <option value="NOTEBOOK">Notebook</option>
+            <option value="TABLET">TABLET</option>
+            <option value="SMARTPHONE">SMARTPHONE</option>
+            <option value="CHROMEBOOK">CHROMEBOOK</option>
+            <option value="NOTEBOOK">NOTEBOOK</option>
           </select>
         </div>
 
