--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
 
     async function cadastrarAgendamento() {
       const professor = document.getElementById("professor").value;
-      const aparelho = document.getElementById("tipo-aparelho").value;
+      const aparelho = document.getElementById("aparelho").value;
       const turma = document.getElementById("studentClass").value;
       const numAparelhos = document.getElementById("numero-aparelhos").value;
       const aula = document.getElementById("aula").value;
@@ -1263,7 +1263,7 @@
     function limparFormulario() {
       document.getElementById("professor").value = "Selecione";
       document.getElementById("email-professor").value = "";
-      document.getElementById("tipo-aparelho").value = "";
+      document.getElementById("aparelho").value = "";
       document.getElementById("marca").value = "";
       document.getElementById("numero-aparelhos").value = "1";
       document.getElementById("studentClass").value = "";
