--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
       transition: all 0.3s ease;
       background-color: var(--branco);
     }
+.form-group input[type="time"] {
+  width: 120px; /* ou ajuste conforme necessário */
+  padding: 8px 10px; /* opcional: reduzir padding para caber melhor */
+}
 
     .form-group input:focus,
     .form-group select:focus {
