--- a/index.html
+++ b/index.html
@@ -539,17 +539,17 @@
 </div>
 
 
-      <div class="form-group">
-        <label>AULA:</label>
-        <select id="aula">
-          <option>1ª Aula</option>
-          <option>2ª Aula</option>
-          <option>3ª Aula</option>
-          <option>4ª Aula</option>
-          <option>5ª Aula</option>
-          <option>6ª Aula</option>
-        </select>
-      </div>
+    <div class="form-group">
+  <label for="aula">Aula:</label>
+  <select id="aula">
+    <option>1ª Aula</option>
+    <option>2ª Aula</option>
+    <option>3ª Aula</option>
+    <option>4ª Aula</option>
+    <option>5ª Aula</option>
+    <option>6ª Aula</option>
+  </select>
+</div>
 
       <div class="conflict-message" id="conflictMessage">
         Já existe um agendamento para esta turma nesta data e aula!
