--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       color: var(--azul-escuro);
     }
 
-    .form-group input,
-    .form-group select {
-      width: 100%;
+.form-group input,
+.form-group select:not(#aula) {
+  width: 100%;
       padding: 12px 15px;
       border: 2px solid var(--branco-brilhante);
       border-radius: 8px;
